<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/clear_checked"
        android:icon="@drawable/baseline_remove"
        android:orderInCategory="1"
        android:title="@string/clear_checked"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/baseline_filter"
        android:orderInCategory="2"
        android:title="@string/sort_order"
        app:showAsAction="ifRoom">
        <menu>
            <group>
                <item
                    android:id="@+id/sort_by_name"
                    android:orderInCategory="10"
                    android:title="@string/sort_by_name"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/sort_by_date"
                    android:orderInCategory="20"
                    android:title="@string/sort_by_date"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/sort_by_importance"
                    android:orderInCategory="30"
                    android:title="@string/sort_by_importance"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>
</menu>