<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="17dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radioButtonEn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:background="@drawable/radio_selector_left"
            android:button="@android:color/transparent"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="@string/en"
            android:textAlignment="center"
            android:textColor="@drawable/text_color" />

        <RadioButton
            android:id="@+id/radioButtonRus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:background="@drawable/radio_selector_right"
            android:button="@android:color/transparent"
            android:checked="true"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="@string/ru"
            android:textAlignment="center"
            android:textColor="@drawable/text_color" />
    </RadioGroup>

    <Button
        android:id="@+id/btGoogleSideBAr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/ripple_side_buttons"
        android:drawableStart="@drawable/baseline_account_circle_24"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        android:text="@string/google_account"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btListsSideBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/ripple_side_buttons"
        android:drawableStart="@drawable/baseline_format_list_bulleted_24"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        android:text="@string/lists"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btGoogleSideBAr"
        />

    <ImageButton
        android:id="@+id/btSwitcherLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/switch_languages"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="onClickListenerButtonDayNight"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_wb_sunny_24" />
</androidx.constraintlayout.widget.ConstraintLayout>