<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/taskCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:button="@drawable/custom_checkbox"
        android:checked="false"
        android:paddingStart="8dp"
        android:text="@string/subtask_name"
        android:textColor="#001018"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/llDateTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/taskCheck"
        app:layout_constraintStart_toStartOf="@+id/taskCheck"
        app:layout_constraintTop_toBottomOf="@+id/taskCheck">

        <ImageView
            android:id="@+id/ivCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            app:srcCompat="@drawable/calendar" />

        <TextView
            android:id="@+id/tvDateTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_weight="1"
            android:text="@string/set_deadline"
            android:textColor="#1D3557"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/llDateTime"
        app:layout_constraintStart_toStartOf="@+id/llDateTime"
        app:layout_constraintTop_toBottomOf="@+id/llDateTime">

        <ImageView
            android:id="@+id/ivDesc"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="center"
            app:srcCompat="@drawable/description" />

        <EditText
            android:id="@+id/taDesc"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="top|start"
            android:hint="@string/subtask_description"
            android:inputType="textMultiLine"
            android:lines="6"
            android:overScrollMode="always"
            android:paddingLeft="8dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColorHint="#1D3557"
            android:textSize="14sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>